[gd_scene load_steps=12 format=3 uid="uid://d0xp5fu2aw3r0"]

[ext_resource type="Script" path="res://uncommon/title_screen.gd" id="1_7y6ev"]
[ext_resource type="Texture2D" uid="uid://b4rrp1lou54j4" path="res://sprites/SCALE FACTOR.png" id="2_ofoo8"]
[ext_resource type="Texture2D" uid="uid://bsxqnq5rrpk3f" path="res://sprites/shadow.png" id="3_bugrf"]
[ext_resource type="AudioStream" uid="uid://hqx0m2b38jvd" path="res://sounds/blip.wav" id="4_h22i4"]
[ext_resource type="PackedScene" uid="uid://6mvlvkl4bi35" path="res://uncommon/tiles.tscn" id="5_xwwbj"]
[ext_resource type="Texture2D" uid="uid://bvgsy34h05xby" path="res://sprites/Test_Tiles.png" id="6_ljauf"]
[ext_resource type="Texture2D" uid="uid://b7pam4adeyfud" path="res://sprites/Light.tres" id="6_rtk0f"]
[ext_resource type="AudioStream" uid="uid://cbmdeskmiao2s" path="res://sounds/track 2.wav" id="8_3wxm5"]

[sub_resource type="Animation" id="Animation_iwb1c"]
resource_name = "start"

[sub_resource type="Animation" id="Animation_ootqu"]
resource_name = "terminal"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bqoeo"]
_data = {
"start": SubResource("Animation_iwb1c"),
"terminal": SubResource("Animation_ootqu")
}

[node name="Title Screen" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_7y6ev")

[node name="TileMap" parent="." instance=ExtResource("5_xwwbj")]
modulate = Color(0.099986, 0.099986, 0.099986, 1)
layer_0/tile_data = PackedInt32Array(393216, 1, 0, 393217, 1, 0, 393218, 1, 0, 393219, 1, 0, 393220, 1, 0, 393221, 1, 0, 393222, 1, 0, 393223, 1, 0, 393224, 1, 0, 393225, 1, 0, 393226, 1, 0, 393227, 1, 0, 458752, 1, 1, 458753, 1, 1, 458754, 1, 1, 458755, 1, 1, 524288, 1, 1, 524289, 1, 1, 524290, 1, 1, 524291, 1, 1, 524292, 1, 1, 524293, 1, 1, 458757, 1, 1, 458758, 1, 1, 458759, 1, 1, 458760, 1, 1, 458761, 1, 1, 458762, 1, 1, 458763, 1, 1, 458764, 1, 1, 458765, 1, 1, 524299, 1, 1, 524298, 1, 1, 524297, 1, 1, 524296, 1, 1, 524295, 1, 1, 524294, 1, 1, 524300, 1, 1, 458766, 1, 1, 393230, 1, 0, 393229, 1, 0, 393228, 1, 0, 524301, 1, 1, 458756, 1, 1, 0, 1, 2, 65536, 1, 2, 131072, 1, 2, 196608, 1, 2, 262144, 1, 2, 327680, 1, 2, 327681, 1, 3, 327682, 1, 2, 262146, 1, 2, 196610, 1, 2, 131074, 1, 2, 65538, 1, 2, 65537, 131073, 3, 1, 1, 2, 131073, 65537, 3, 196609, 65537, 3, 262145, 65537, 3, 2, 1, 2, 3, 1, 2, 65539, 1, 2, 65540, 1, 2, 131076, 1, 2, 196612, 1, 2, 196611, 1, 2, 262147, 1, 2, 131075, 1, 2, 4, 1, 2, 262148, 1, 2, 327684, 1, 2, 327683, 1, 2, 327685, 1, 2, 262149, 1, 2, 196613, 1, 2, 131077, 1, 2, 65541, 1, 2, 5, 1, 2, 6, 1, 2, 7, 1, 2, 8, 1, 2, 65544, 1, 2, 65545, 1, 2, 65546, 1, 2, 65547, 131073, 3, 65548, 1, 2, 65549, 1, 2, 14, 1, 2, 65550, 1, 2, 131086, 1, 2, 196622, 1, 2, 327694, 1, 2, 327693, 1, 2, 262157, 1, 2, 196621, 1, 2, 131085, 1, 2, 262158, 1, 2, 13, 1, 2, 11, 1, 2, 12, 1, 2, 10, 1, 2, 9, 1, 2, 131082, 1, 2, 131081, 1, 2, 131080, 1, 2, 131079, 1, 2, 131078, 1, 2, 131083, 65537, 3, 131084, 1, 2, 65542, 1, 2, 65543, 1, 2, 196617, 1, 2, 196616, 1, 2, 196615, 1, 2, 196614, 1, 2, 196620, 1, 2, 196619, 65537, 3, 196618, 1, 2, 262156, 1, 2, 262155, 65537, 3, 262154, 1, 2, 262153, 1, 2, 262152, 1, 2, 262151, 1, 2, 262150, 1, 2, 327692, 1, 2, 327691, 1, 3, 327690, 1, 2, 327689, 1, 2, 327688, 1, 2, 327687, 1, 2, 327686, 1, 2, 524302, 1, 1)

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.18359, 0.18359, 0.18359, 1)
position = Vector2(776, 419)
scale = Vector2(5, 5)
texture = ExtResource("6_ljauf")

[node name="Light" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.388235)
position = Vector2(777, 426)
scale = Vector2(3.55904, 3.55904)
texture = ExtResource("6_rtk0f")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0

[node name="Sprite2D2" type="Sprite2D" parent="Control"]
position = Vector2(398.055, 292.161)
scale = Vector2(0.18, 0.18)
texture = ExtResource("2_ofoo8")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_h22i4")

[node name="Control2" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Button" type="Button" parent="Control2"]
layout_mode = 0
offset_left = 959.0
offset_top = 180.0
offset_right = 1476.0
offset_bottom = 285.0
theme_override_font_sizes/font_size = 71
text = "Start game"
alignment = 0

[node name="Button3" type="Button" parent="Control2/Button"]
layout_mode = 0
offset_left = 193.0
offset_top = 103.0
offset_right = 269.0
offset_bottom = 134.0
text = "toutorial"

[node name="Button2" type="Button" parent="Control2"]
layout_mode = 0
offset_left = 960.0
offset_top = 334.0
offset_right = 1477.0
offset_bottom = 439.0
theme_override_font_sizes/font_size = 71
text = "Terminal"
alignment = 0

[node name="Shadow" type="Sprite2D" parent="Control2"]
position = Vector2(365.055, 290.161)
scale = Vector2(0.189796, 0.189796)
texture = ExtResource("3_bugrf")
region_enabled = true
region_rect = Rect2(0, 0, 3478.67, 2046)

[node name="Node2D" type="Node2D" parent="."]
position = Vector2(730, 180)

[node name="Node2D2" type="Node2D" parent="."]
position = Vector2(731, 334)

[node name="Node2D3" type="Node2D" parent="."]
position = Vector2(956, 180)

[node name="Node2D4" type="Node2D" parent="."]
position = Vector2(957, 334)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_bqoeo")
}

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
position_smoothing_enabled = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="CanvasLayer"]
offset_right = 213.0
offset_bottom = 23.0
text = "Build no. GMTK2024_Rel 1.0"

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_3wxm5")
volume_db = -9.657
autoplay = true

[connection signal="mouse_entered" from="Control2/Button" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="Control2/Button" to="." method="_on_button_pressed"]
[connection signal="mouse_entered" from="Control2/Button/Button3" to="." method="_on_button_3_mouse_entered"]
[connection signal="pressed" from="Control2/Button/Button3" to="." method="_on_button_3_pressed"]
[connection signal="mouse_entered" from="Control2/Button2" to="." method="_on_button_2_mouse_entered"]
[connection signal="pressed" from="Control2/Button2" to="." method="_on_button_2_pressed"]
[connection signal="finished" from="AudioStreamPlayer2" to="." method="_on_audio_stream_player_2_finished"]
